--- a/Resultat_yidi.ipynb
+++ b/Resultat_yidi.ipynb
@@ -475,11 +475,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preparation for train set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "df = pd.read_csv('annote_yidi.csv')\n",
+    "\n",
+    "os.makedirs('E', exist_ok=True)\n",
+    "os.makedirs('I', exist_ok=True)\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    col_A = row['GOLD']\n",
+    "    col_F = row['vacances']\n",
+    "    col_G = row['passe-temps']\n",
+    "\n",
+    "    if 'E' in col_A:\n",
+    "\n",
+    "        target_directory = 'E' \n",
+    "\n",
+    "        file_name = f'{target_directory}/file-{index}.txt'  \n",
+    "\n",
+    "        with open(file_name, 'w') as file:\n",
+    "            file.write(f'{col_F}\\n{col_G}\\n')\n",
+    "    if 'I'in col_A:\n",
+    "\n",
+    "        target_directory = 'I' \n",
+    "\n",
+    "        file_name = f'{target_directory}/file-{index}.txt'  \n",
+    "\n",
+    "        with open(file_name, 'w') as file:\n",
+    "            file.write(f'{col_F}\\n{col_G}\\n')\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
