--- a/Resultat_kexin.ipynb
+++ b/Resultat_kexin.ipynb
@@ -1073,38 +1073,38 @@
     "import os\n",
     "import re\n",
     "\n",
-    "def nettoyage_and_rewrite_directory(directory_path):\n",
+    "#def nettoyage_and_rewrite_directory(directory_path):\n",
     "    # Load the list of stop words\n",
-    "    with open('stop-w_fr.txt', 'r', encoding='utf-8') as stop_words_file:\n",
-    "        stop_words = set(stop_words_file.read().splitlines())\n",
+    "    #with open('stop-w_fr.txt', 'r', encoding='utf-8') as stop_words_file:\n",
+    "        #stop_words = set(stop_words_file.read().splitlines())\n",
     "\n",
     "    # Define a pattern to extract words (at least 2 characters) with accented characters\n",
-    "    pattern = r'[\\wÀ-ÖØ-öø-ÿ]+'\n",
+    "    #pattern = r'[\\wÀ-ÖØ-öø-ÿ]+'\n",
     "\n",
-    "    for root, dirs, files in os.walk(directory_path):\n",
-    "        for file in files:\n",
-    "            file_path = os.path.join(root, file)\n",
+    "    #for root, dirs, files in os.walk(directory_path):\n",
+    "        #for file in files:\n",
+    "            #file_path = os.path.join(root, file)\n",
     "            \n",
-    "            if file_path.endswith(\".txt\"):\n",
+    "            #if file_path.endswith(\".txt\"):\n",
     "                # Read the file and initialize the result string\n",
-    "                with open(file_path, 'r', encoding='utf-8') as input_file:\n",
-    "                    text = input_file.read()\n",
+    "                #with open(file_path, 'r', encoding='utf-8') as input_file:\n",
+    "                    #text = input_file.read()\n",
     "\n",
-    "                cleaned_text = \"\"\n",
+    "                #cleaned_text = \"\"\n",
     "\n",
     "                # Tokenize the text and process each word\n",
-    "                for word in re.findall(pattern, text.lower()):\n",
+    "                #for word in re.findall(pattern, text.lower()):\n",
     "                    # Check if the word is not a stop word\n",
-    "                    if word not in stop_words:\n",
-    "                        cleaned_text += word + ' '\n",
+    "                    #if word not in stop_words:\n",
+    "                        #cleaned_text += word + ' '\n",
     "\n",
     "                # Write the cleaned text back to the same file\n",
-    "                with open(file_path, 'w', encoding='utf-8') as output_file:\n",
-    "                    output_file.write(cleaned_text)\n",
+    "                #with open(file_path, 'w', encoding='utf-8') as output_file:\n",
+    "                    #output_file.write(cleaned_text)\n",
     "\n",
     "# Example usage to clean and rewrite files in the 'E' directory\n",
-    "directory_path = 'MBTI_CATEGORIE/EI/I_cleaned'\n",
-    "nettoyage_and_rewrite_directory(directory_path)\n"
+    "#directory_path = 'MBTI_CATEGORIE/EI/I_cleaned'\n",
+    "#nettoyage_and_rewrite_directory(directory_path)\n"
    ]
   },
   {
